Sun Dec  7 17:09:17 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/ToplevelScope.java: use SemanticException
	  instead of SemanticError for duplicated declarations/definitions.

Sun Dec  7 17:08:26 2008  Minero Aoki  <aamine@loveruby.net>

	* test: test declaration override (error path).

Sun Dec  7 16:55:56 2008  Minero Aoki  <aamine@loveruby.net>

	* test: test declaration override.

	* test/run.sh: new option --help.

Mon Nov 24 18:49:27 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: refactoring:
	  reduce lvar.

Sun Nov 16 23:57:08 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: an array on the
	  parameter list is a pointer really.

	* net/loveruby/cflat/compiler/TypeChecker.java: an array for stmt
	  value *is* valid because it is a pointer really.

	* net/loveruby/cflat/compiler/CodeGenerator.java: st.x while st.x
	  is an array should make a pointer.

	* net/loveruby/cflat/type/Type.java: remove #isPointerAlike, there
	  is only a Pointer and an Array already.

	* net/loveruby/cflat/type/ArrayType.java: ditto.

	* net/loveruby/cflat/type/PointerType.java: ditto.

	* net/loveruby/cflat/type/UserType.java: ditto.

	* net/loveruby/cflat/ast/ArefNode.java: ditto.

	* net/loveruby/cflat/ast/Variable.java: ditto.

	* net/loveruby/cflat/ast/ExprNode.java: ditto.

	* test: check st.x[1] access.

	* test: check pst->x[1] access.

Sun Nov 16 22:29:33 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: "f = puts"
	  implies "f = &puts", adjust type for such expressions.

Sun Nov 16 21:28:00 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: make compiler mode
	  enum.

	* net/loveruby/cflat/compiler/Options.java: ditto.

	* net/loveruby/cflat/compiler/SourceFile.java: ditto.

	* net/loveruby/cflat/compiler/CompilerMode.java: new enum.
