@@ -1,3 +1,8 @@
+Sun Dec  7 17:13:45 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/LocalReferenceResolver.java ->
+	  LocalResolver.java
+
 Sun Dec  7 17:09:17 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/ast/ToplevelScope.java: use SemanticException
